# CameraMan

./: adhoc_query.py  classify.py  compreface_webcam_recognition_demo.py  cv_portal.py  demofile.txt  kk.py  main.py  pygame_audio_demo.py  pygame_auto_direction.py  pygame_legacy_crop.py  pygame_legacy_direction.py  pygame_merge copy.py  pygame_merge.py  pygame_portal.py  pyproject.toml  single_detector.py  utils.py  web_portal.py
cameraman/: model.py  utils.py
models/: face_keypoint_classifier.tflite
