[tool.poetry]
name = "cameraman"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
mediapipe = "^0.10.3"
streamlit = "^1.25.0"
streamlit-webrtc = "^0.45.1"
av = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
