[tool.poetry]
name = "cameraman"
version = "0.1.0"
description = ""
authors = ["cailurus <ailurus.chow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.4"
scipy = "^1.11.1"
tensorflow = "^2.13.0"
tensorflow-macos = "^2.13.0"
tensorflow-metal = "^1.0.1"
mediapipe = "^0.10.3"
sounddevice = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
