[tool.poetry]
name = "cameraman"
version = "0.1.0"
description = ""
authors = ["cailurus <ailurus.chow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.4"
scipy = "^1.11.1"
sounddevice = "^0.4.6"
imageio = {extras = ["ffmpeg"], version = "^2.31.2"}
pysimplegui = "^4.60.5"
opencv-python = "^4.8.0.76"
dearpygui = "^1.9.1"
pygame = "^2.5.1"
requests = "^2.31.0"
compreface-sdk = "^0.6.0"
urllib3 = "1.26.15"
tensorflow-macos = "^2.13.0"
keras = "^2.13.1"
mediapipe = "0.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
